--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,36 @@
+glibc (2.31-0ubuntu9.8) focal; urgency=medium
+
+  * Update for 20.04. (LP: #1951033)
+
+  [ Balint Reczey ]
+  * Cherry-pick upstream patch to fix building with -moutline-atomics
+  * Prevent rare deadlock in pthread_cond_signal (LP: #1899800)
+
+  [ Matthias Klose ]
+  * Revert: Use DH_COMPAT=8 for dh_strip to fix debug sections for valgrind.
+    Enables debugging ld.so related issues. (LP: #1918035)
+  * Don't strip ld.so on armhf. (LP: #1927192)
+
+  [ Gunnar Hjalmarsson ]
+  * d/local/usr_sbin/update-locale: improve sanity checks. (LP: #1892825)
+
+  [ Heitor Alves de Siqueira ]
+  * d/p/u/git-lp1928508-reversing-calculation-of-__x86_shared_non_temporal.patch:
+    - Fix memcpy() performance regression on x86 AMD systems (LP: #1928508)
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/libc.preinst: drop the check for kernel release
+    > 255 now that glibc and preinstall script are fixed. (LP: #1962225)
+
+  [ Michael Hudson-Doyle ]
+  * libc6 on arm64 is now built with -moutline-atomics so libc6-lse can now be
+    an empty package that is safe to remove. (LP: #1912652)
+  * d/patches/u/aarch64-memcpy-improvements.patch: Backport memcpy
+    improvements. (LP: #1951032)
+  * Add test-float64x-yn to xfails on riscv64.
+
+ -- Michael Hudson-Doyle <michael.hudson@ubuntu.com>  Thu, 10 Mar 2022 14:36:19 +1300
+
 glibc (2.31-0ubuntu9.7) focal-security; urgency=medium
 
   * SECURITY UPDATE: infinite loop in iconv
