--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,81 @@
+glibc (2.34-0experimental5) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - debian/patches/powerpc/local-powerpc8xx-dcbz.diff: rebase.
+    - debian/rules.d/build.mk: stop passing --with-default-link=no which is
+      now the default.
+  * debian/control.in/libc: Add breaks in libc6-dev against dev packages that
+    encode the path to libpthread.so, librt.so or libutil.so, they need to be
+    binNMUed:
+    - libassimp-dev (<= 5.2.4~ds0-1)
+    - libbson-dev (<= 1.22.0-1)
+    - libdeal.ii-dev (<= 9.4.0-1)
+    - libdolfin-dev-common (<= 2019.2.0~git20220407.d29e24d-5)
+    - libeckit-dev (<= 1.20.0-1)
+    - libfclib-dev (<= 3.1.0+dfsg-2)
+    - libfltk1.3-dev (<= 1.3.8-4+b1)
+    - libinsighttoolkit4-dev (<= 4.13.3withdata-dfsg2-3+b1)
+    - libinsighttoolkit5-dev (<= 5.2.1-5+b1)
+    - libismrmrd-dev (<= 1.8.0-2)
+    - liblog4cplus-dev (<= 2.0.7-1)
+    - libmgl-dev (<= 8.0.1-2)
+    - libmimalloc2.0 (<= 2.0.6+ds-1)
+    - libminc-dev (<= 2.4.03-5)
+    - libmrpt-ros1bridge-dev (<= 1:2.4.9+ds-4+b2)
+    - libnetcdf-dev (<= 1:4.9.0-2)
+    - libnetcdf-mpi-dev (<= 1:4.9.0-1)
+    - libnetcdf-pnetcdf-dev (<= 1:4.9.0-1)
+    - libns3-dev (<= 3.36.1+dfsg-4)
+    - libopenms-dev (<= 2.6.0+cleaned1-3+b1)
+    - libtrilinos-amesos2-dev (<= 13.2.0-3)
+    - libtrilinos-amesos-dev (<= 13.2.0-3)
+    - libtrilinos-anasazi-dev (<= 13.2.0-3)
+    - libtrilinos-aztecoo-dev (<= 13.2.0-3)
+    - libtrilinos-belos-dev (<= 13.2.0-3)
+    - libtrilinos-epetra-dev (<= 13.2.0-3)
+    - libtrilinos-epetraext-dev (<= 13.2.0-3)
+    - libtrilinos-galeri-dev (<= 13.2.0-3)
+    - libtrilinos-ifpack2-dev (<= 13.2.0-3)
+    - libtrilinos-ifpack-dev (<= 13.2.0-3)
+    - libtrilinos-intrepid2-dev (<= 13.2.0-3)
+    - libtrilinos-intrepid-dev (<= 13.2.0-3)
+    - libtrilinos-isorropia-dev (<= 13.2.0-3)
+    - libtrilinos-kokkos-dev (<= 13.2.0-3)
+    - libtrilinos-kokkos-kernels-dev (<= 13.2.0-3)
+    - libtrilinos-komplex-dev (<= 13.2.0-3)
+    - libtrilinos-ml-dev (<= 13.2.0-3)
+    - libtrilinos-moertel-dev (<= 13.2.0-3)
+    - libtrilinos-muelu-dev (<= 13.2.0-3)
+    - libtrilinos-nox-dev (<= 13.2.0-3)
+    - libtrilinos-phalanx-dev (<= 13.2.0-3)
+    - libtrilinos-pike-dev (<= 13.2.0-3)
+    - libtrilinos-piro-dev (<= 13.2.0-3)
+    - libtrilinos-pliris-dev (<= 13.2.0-3)
+    - libtrilinos-rol-dev (<= 13.2.0-3)
+    - libtrilinos-rtop-dev (<= 13.2.0-3)
+    - libtrilinos-rythmos-dev (<= 13.2.0-3)
+    - libtrilinos-sacado-dev (<= 13.2.0-3)
+    - libtrilinos-shylu-dev (<= 13.2.0-3)
+    - libtrilinos-stokhos-dev (<= 13.2.0-3)
+    - libtrilinos-stratimikos-dev (<= 13.2.0-3)
+    - libtrilinos-teko-dev (<= 13.2.0-3)
+    - libtrilinos-teuchos-dev (<= 13.2.0-3)
+    - libtrilinos-thyra-dev (<= 13.2.0-3)
+    - libtrilinos-tpetra-dev (<= 13.2.0-3)
+    - libtrilinos-trilinoscouplings-dev (<= 13.2.0-3)
+    - libtrilinos-triutils-dev (<= 13.2.0-3)
+    - libtrilinos-xpetra-dev (<= 13.2.0-3)
+    - libtrilinos-zoltan2-dev (<= 13.2.0-3)
+    - libvisp-dev (<= 3.5.0-2+b1)
+    - libvotca-dev (<= 2022-3)
+    - libvtk6-dev (<= 6.3.0+dfsg2-8.1+b1)
+    - libvtk7-dev (<= 7.1.1+dfsg2-10.1+b2)
+  * debian/testsuite-xfail-debian.mk: XFAIL recently backports audit tests on
+    MIPS.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 11 Jul 2022 19:30:26 +0200
+
 glibc (2.34-0experimental4) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -123,6 +201,20 @@ glibc (2.34-0experimental0) experimental; urgency=medium
   * debian/patches/hurd-i386/local-mach_print.diff: Drop patch.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 Dec 2021 23:52:06 +0100
+
+glibc (2.33-8) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/git-spawni-reauth.diff: Fix make calls to spawni.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix testsuite on arm64 with recent binutils versions.  Closes: #1014109.
+  * debian/rules.d/build.mk, debian/testsuite-mips-nan2008.c: disable the
+    testsuite if the CPU NaN doesn't encoding matches the ABI. This fixes FTBFS
+    on broken mips build daemons.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Jul 2022 22:29:34 +0200
 
 glibc (2.33-7) unstable; urgency=medium
 
