--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+glibc (2.35-0experimental3) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/control.in/libc: add a breaks against valgrind (<< 1:3.19.0-1~).
+    See #1017791.
+  * debian/debhelper.in/libc-bin.install: install /usr/bin/ld.so.
+  * debian/rules.d/build.mk: egrep -> grep -E.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 11 Sep 2022 11:40:03 +0200
+
 glibc (2.35-0experimental2) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -46,6 +56,7 @@ glibc (2.35-0experimental0) experimental; urgency=medium
     - debian/patches/hurd-i386/tg-EIEIO-fr.diff: upstreamed.
     - debian/patches/hurd-i386/tg-EGREGIOUS-fr.diff: upstreamed.
     - debian/patches/hurd-i386/local-tls-ie-align.diff: dropped, obsolete.
+    - debian/patches/hurd-i386/git-thrd_current.diff: dropped, obsolete.
     - debian/patches/kfreebsd/submitted-auxv.diff: rebased.
     - debian/patches/mips/submitted-rld_map.diff: rebased.
     - debian/patches/all/submitted-po-fr-fixes.diff: upstreamed.
@@ -72,6 +83,32 @@ glibc (2.35-0experimental0) experimental; urgency=medium
   * debian/patches/hurd-i386/tg-bits_atomic.h_multiple_threads.diff: Refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 07 Aug 2022 22:25:02 +0200
+
+glibc (2.34-8) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/git-strerror_X.diff: Fix strerror format.
+  * debian/patches/hurd-i386/git-xpg_strerror.diff: Fix xpg_error behavior.
+  * debian/patches/hurd-i386/git-thrd_current.diff: Fix calling thrd_current
+    without libpthread.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 11 Sep 2022 00:05:13 +0200
+
+glibc (2.34-7) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/debhelper.in/libc.install, debian/debhelper.in/libc-udeb.install:
+    Allow installing /lib/ld.so, it's required on hurd-i386.
+
+  [ Aurelien Jarno ]
+  * debian/rules, debian/rules.d/build.mk, debian/rules.d/debhelper.mk: read
+    ld.so and libc.so names from upstream generated soversions.mk instead of
+    looking directly for generated binaries.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 27 Aug 2022 13:38:11 +0200
 
 glibc (2.34-6) unstable; urgency=medium
 
