--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+glibc (2.36-4) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix y2038 support in fstatat on mips64el.  Closes: #1022991.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 02 Nov 2022 19:43:41 +0100
+
 glibc (2.36-3) unstable; urgency=medium
 
   [ Aurelien Jarno ]
