--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+glibc (2.36-5) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/git-sigtimedwait.diff: Add support for
+    sigtimedwait and sigwaitinfo.
+  * debian/testsuite-xfail-debian.mk: Update accordingly.
+
+  [ Aurelien Jarno ]
+  * debian/sysdeps/sh{3,4}.mk: build with --disable-default-pie.  Closes:
+    #1023554.
+  * debian/control.in/main: bump binutils build-depends to 2.38.
+  * debian/control.in/libc: add a Breaks against binutils (<< 2.38).  Closes:
+    #1023661.
+  * debian/control.in/libc: add a Breaks against check (<< 0.15.2-2+b1) on
+    s390x.  Addresses: #1023531.
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 12 Nov 2022 14:23:05 +0100
+
 glibc (2.36-4) unstable; urgency=medium
 
   [ Aurelien Jarno ]
