--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+glibc (2.36-6) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/libc-udeb.install: stop installing (now empty)
+    libutil.so.1, it is not used by any of the udeb in testing/sid.
+  * debian/rules.d/build.mk: ensure that an empty libanl.a is shipped even on
+    newly added upstream architectures.
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+  
+  [ Dandan Zhang ]
+  * debian/sysdeps/loong64.mk: add support for loong64 architecture.  Closes:
+    #1024130.
+
+  [ Helmut Grohne ]
+  * Declare packages skipped by noudeb build profile.  Closes: #1024940.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 28 Nov 2022 22:26:50 +0100
+
 glibc (2.36-5) unstable; urgency=medium
 
   [ Samuel Thibault ]
